<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.accenture</groupId>
	<artifactId>Accenture_Parent</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Accenture_Parent</name>
	<url>http://maven.apache.org</url>

 <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>1.3.5.RELEASE</version>
    </parent>

	<properties>
		<java.version>1.8</java.version>
		<!--<hibernate.core.version>4.3.11.Final</hibernate.core.version>
		<hibernate.annotations.versions>3.4.0.GA</hibernate.annotations.versions>
		<hibernate.validator.version>5.1.1.Final</hibernate.validator.version>
		<spring.version>4.2.0.RELEASE</spring.version>
		<spring.batch.version>3.0.5.RELEASE</spring.batch.version>
		<spring.batch.test.version>3.0.5.RELEASE</spring.batch.test.version>
		<quartz.version>2.2.1</quartz.version>
		<org.aspectj.version>1.7.4</org.aspectj.version>
		<org.slf4j.version>1.6.6</org.slf4j.version>

		<commons.logging.version>1.1.3</commons.logging.version>
		<oracle.database.driver.version>12.1.0.1</oracle.database.driver.version>
		<inject.version>1</inject.version>
		<javax.servlet.api.version>3.0.1</javax.servlet.api.version>
		<jsp.api.version>2.1</jsp.api.version>
		<jstl.version>1.2</jstl.version>
		<junit.version>4.11</junit.version>
		<validation.api.version>1.1.0.Final</validation.api.version>
		<persistence.api.version>1.0</persistence.api.version>
		<jta.version>1.1</jta.version>
		<javassist.version>3.18.1-GA</javassist.version>
		<ehcache.core.version>2.5.7</ehcache.core.version>
		<cglib.nodep.version>2.2</cglib.nodep.version>
		<liquibase.core.version>3.1.1</liquibase.core.version>
		<mail.version>1.4.3</mail.version>
		<jackson.version>1.9.10</jackson.version>
		<jackson.databind-version>2.2.3</jackson.databind-version>
		<jms.version>2.0.1</jms.version>
		<easymock.version>3.4</easymock.version>
		<objenesis.version>2.1</objenesis.version>
		<argLine>-Xms1024m -Xmx1024m -XX:PermSize=1024m -XX:MaxPermSize=1024m </argLine> -->
		<basedir>Accenture_Parent</basedir>
	</properties>

	<modules>
		<module>../Accenture_Common</module>
		<module>../Accenture_PL</module>
		<module>../Accenture_Web</module>
	</modules>

	<build>
		<plugins>


		</plugins>
	</build>


	<dependencies>
		<!-- Spring -->

		 <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-tomcat</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.tomcat.embed</groupId>
            <artifactId>tomcat-embed-jasper</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
		</dependency>
		<dependency>
		<groupId>org.jboss.forge.roaster</groupId>
		<artifactId>roaster-api</artifactId>
		<version>2.19.3.Final</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.forge.roaster</groupId>
			<artifactId>roaster-distribution</artifactId>
			<version>2.19.3.Final</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.forge.roaster</groupId>
			<artifactId>roaster-jdt</artifactId>
			<version>2.19.3.Final</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.5</version>
		</dependency>
	</dependencies>
</project>